<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/display_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/amount_to_be_converted"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/amount_to_be_converted"
                android:textColor="#616161"
                android:textSize="64sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_amount_converted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/display_layout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/amount_converted"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="2"
                android:text="@string/amount_to_be_converted"
                android:textColor="#616161"
                android:textSize="64sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aed"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_amount_converted"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_one"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/one"
                    android:textSize="48sp" />

                <Button
                    android:id="@+id/button_two"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/two"
                    android:textSize="48sp" />

                <Button
                    android:id="@+id/button_three"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/three"
                    android:textSize="48sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_four"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/four"
                    android:textSize="48sp" />

                <Button
                    android:id="@+id/button_five"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="buttonFive"
                    android:text="@string/five"
                    android:textSize="48sp" />

                <Button
                    android:id="@+id/button_six"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="buttonSix"
                    android:text="@string/six"
                    android:textSize="48sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_seven"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="buttonSeven"
                    android:text="@string/seven"
                    android:textSize="48sp" />

                <Button
                    android:id="@+id/button_eight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="buttonEight"
                    android:text="@string/eight"
                    android:textSize="48sp" />

                <Button
                    android:id="@+id/button_nine"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="buttonNine"
                    android:text="@string/nine"
                    android:textSize="48sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_cancle_one"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="buttonCancleOne"
                    android:text="@string/delete"
                    android:textSize="48sp" />

                <Button
                    android:id="@+id/button_zero"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="buttonZero"
                    android:text="@string/zero"
                    android:textSize="48sp" />

                <Button
                    android:id="@+id/button_cancle_two"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="buttonCancleTwo"
                    android:text="@string/delete"
                    android:textSize="48sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>