<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.dxb.dubai_mall">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/dubai_mall_image_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:contentDescription="@string/dubai_mall_title"
            android:scaleType="centerCrop"
            android:src="@drawable/dubai_mall" />

        <LinearLayout
            android:id="@+id/dubai_mall_layout_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dubai_mall_image_one"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dubai_mall_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/dubai_mall_title"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dubai_mall_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/dubai_mall_body"
                android:textColor="#000000"
                android:textSize="14sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="theDubaiMallNavigation"
                android:text="@string/navigate_me" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>
