<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.dxb.palm_jumeirah">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/palm_jumeirah_image_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:contentDescription="@string/palm_jumeirah_title"
            android:scaleType="fitXY"
            android:src="@drawable/palm_jumeirah_one" />

        <LinearLayout
            android:id="@+id/palm_jumeira_layout_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/palm_jumeirah_image_1"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/palm_jumeira_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/palm_jumeirah_title"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/palm_jumeira_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/palm_jumeirah_body"
                android:textColor="#000000"
                android:textSize="14sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="palmJumeirahNavigation"
                android:text="@string/navigate_me" />
        </LinearLayout>

    </RelativeLayout>


</ScrollView>
